--- a/psychic_game.html
+++ b/psychic_game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Psychic Game</title>
-    <link href="https://fonts.googleapis.com/css?family=Monoton|Rokkitt:400" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Rokkitt:400,600" rel="stylesheet" />
     <style type="text/css">
         h1{
             color: indigo;
@@ -21,6 +21,7 @@
 
         h2 {
             font-size: 28px;
+            font-weight: 600;
         }
 
         body {
